2004-06-24  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/canvPs.test, etc: Use standard tcltest constraint names.

2004-06-19  Daniel Steffen  <das@users.sourceforge.net>

	* unix/tcl.m4: autoconf 2.5 fixes in Darwin section.
	* unix/configure: autoconf-2.57

2004-06-17  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* tests/constraints.tcl, tests/*.test: Systematization of test
	constraints so many common and basic constraints are defined once
	with a single name.

2004-06-16  Joe English  <jenglish@users.sourceforge.net>

	* unix/tkUnixWm.c, win/tkWinWm.c, macosx/tkMacOSXWm.c,
	tests/wm.test, tests/unixWm.test: Fix for #742882
	"Potential division by zero in gridded wm geometry"

2004-06-15  Anton Kovalenko <a_kovalenko@users.sourceforge.net>

	* win/tkWinButton.c: Add a 3D highlight to disabled *buttons and
	labels, the same way as it's now done for disabled menu entries.

2004-06-15  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/image.n: Enhanced the documentation to take into account the
	concerns raised in [RFE 803060]

	* tests/canvas.test: Updated tests affected by the change to
	ScrollFractions, which is now clean about result generation.

	* generic/tkCanvas.c: Make tag search subsystem use symbolic names
	for type flags for easier maintenance.
	(FIRST_CANVAS_ITEM_MATCHING,FOR_EVERY_CANVAS_ITEM_MATCHING):
	Factorize out searching idioms into macros to reduce the #ifdef
	count and make braces match.
	(ScrollFractions): Really create a list Tcl_Obj.

2004-06-12  Anton Kovalenko <a_kovalenko@users.sourceforge.net>

	* win/tkWinWm.c (UpdateWrapper): Let overrideredirect'ed window's
	wrapper be the child of desktop window, thus making it to behave more
	similarly to X11 Override Redirect. Esp. useful for combobox-like
	megawidgets.

2004-06-09  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tkText.c: 
	* tests/text.test: fix to multi-line regexp search bugs in text
	widget (reported against Alphatk editor, not on sf).  